# django_blog

./: .gitignore  Makefile  README.md  pyproject.toml
django_blog/: settings.py  urls.py  views.py
django_blog/article/: views.py
django_blog/article/templates/articles/: index.html
django_blog/templates/: abouth.html
