[tool.poetry]
name = "hex-django-blog"
version = "0.1.0"
description = ""
authors = ["Denis <ad.way@mail.ri>"]
readme = "README.md"
packages = [{include = "hex_django_blog"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
